@@ -122,6 +122,18 @@
          includes="ziptest/**" filesonly="true"/>
   </target>
 
+  <!-- Bugzilla Report 22865 -->
+  <target name="testEmptySkip">
+    <mkdir dir="ziptest"/>
+    <zip destfile="test3.zip" basedir="ziptest" whenempty="skip"/>
+  </target>
+
+  <!-- Bugzilla Report 30365 -->
+  <target name="zipEmptyDir">
+        <mkdir dir="empty/empty2"/>
+		<zip destfile="test3.zip" basedir="empty" update="true"/>
+  </target>
+
   <target name="cleanup">
     <delete file="test3.zip"/>
     <delete file="test4.zip"/>
@@ -134,5 +146,6 @@
     <delete file="zipgroupfileset.zip"/>
     <delete file="../dummyfile" />
     <delete dir="ziptest"/>
+    <delete dir="empty"/>
   </target>
 </project>
