@@ -917,13 +917,13 @@ public class Zip extends MatchingTask {
             Vector resources = new Vector();
             String[] directories = rs.getIncludedDirectories();
             for (int j = 0; j < directories.length; j++) {
-                if (!"".equals(directories[0]) || !skipEmptyNames) {
+                if (!"".equals(directories[j]) || !skipEmptyNames) {
                     resources.addElement(rs.getResource(directories[j]));
                 }
             }
             String[] files = rs.getIncludedFiles();
             for (int j = 0; j < files.length; j++) {
-                if (!"".equals(files[0]) || !skipEmptyNames) {
+                if (!"".equals(files[j]) || !skipEmptyNames) {
                     resources.addElement(rs.getResource(files[j]));
                 }
             }
